[package]
name = "lsm_tpm-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
lsm_tpm-common = { path = "../lsm_tpm-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "lsm_tpm"
path = "src/main.rs"

[profile.release]
panic = "abort"
