[workspace]
resolver = "2"
members = [
    "lsm_tpm",
    "lsm_tpm-common",
    "lsm_tpm-ebpf",
]
default-members = ["lsm_tpm", "lsm_tpm-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "7a8ad146f48c8a044bd9d47cabdd08e1c5542b6b" }
aya-build = { git = "https://github.com/aya-rs/aya", rev = "7a8ad146f48c8a044bd9d47cabdd08e1c5542b6b"  }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "7a8ad146f48c8a044bd9d47cabdd08e1c5542b6b"  }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "7a8ad146f48c8a044bd9d47cabdd08e1c5542b6b"  }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "7a8ad146f48c8a044bd9d47cabdd08e1c5542b6b"  }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.lsm_tpm-ebpf]
debug = 2
codegen-units = 1
